--- a/js1.html
+++ b/js1.html
@@ -26,7 +26,7 @@
         <input type="text" id="imie"><br>
         <label for="nazwisko">Nazwisko:</label>
         <input type="text" id="nazwisko">
-        <button type="button" onclick="wyswietl()">Wyślij</button>
+        <button type="button" oninput="wyswietl()">Wyślij</button>
     </form>
 
     <H1 id="wynik"></H1>
