--- a/js1.html
+++ b/js1.html
@@ -26,7 +26,7 @@
         <input type="text" id="imie" oninput="wyswietl()"><br>
         <label for="nazwisko">Nazwisko:</label>
         <input type="text" id="nazwisko" oninput="wyswietl()">
-        <button type="button" onclick="wyswietl()">Wyślij</button>
+        <button type="button">Wyślij</button>
 
     
             
