--- a/js1.html
+++ b/js1.html
@@ -43,13 +43,19 @@
 
     <form id="myForm">
   <label for="imief">Imię:</label><br>
-  <input type="text" id="imief" name="imief"><br>
+  <input type="text" id="imief" name="imief">
+  <p id="informacja"></p>
+  <p id="blad"></p>
+  <br>
 
   <label for="nazwiskof">Nazwisko:</label><br>
   <input type="text" id="nazwiskof" name="nazwiskof"><br>
 
   <label for="wiekf">Wiek:</label><br>
   <input type="number" id="wiekf" name="wiekf"><br><br>
+
+    <label for="emailf">Email:</label><br>
+  <input type="email" id="emailf" name="emailf" placeholder="Podaj email"><br><br>  
 
   <input type="submit" value="Wyślij">
 </form>
