--- a/egzamin.html
+++ b/egzamin.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css1.css">
     <title>Egzamin</title>
 </head>
 <body>
+    <header>
+        <h1>Egzamin HTML i JS</h1>
+
+    </header>
+    <nav>
+    <p>NAV</p>    
+    </nav>
+    <main>
+
+        
 
     <H2>Oblicz miesięczną ratę</H2>
 
@@ -14,7 +25,7 @@
         <label for="checkbox1">React</label> <br>
      <input type="checkbox" id="checkbox2" name="checkbox2" value="js">
         <label for="checkbox2">JS</label> <br>
-    <label for="text1">Liczba rat</label> <br>
+    <label class="klasa" for="text1">Liczba rat</label> <br>
         <input type="text" id="iloscrat" name="iloscrat"> <br>
     <select id="select1" name="select1">
         <option value="Kraków">Kraków</option>
@@ -29,6 +40,16 @@
     <H1 id="wynik"></H1>
     <H3 id="rata1"></H3>
     <h4 id="miasto1"></h4>
+
+    </main>
+    <aside>
+        <p>ASIDE</p>
+    </aside>
+
+    <footer>
+        <p>FOOTER</p>   
+    </footer>
+
 
     <script src="egzamin.js"></script>
 </body>
